<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentFour">

    <TextView
        android:id="@+id/tv_screen_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_screen_4"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fragment_four"
        android:text="@string/text_result"
        android:textAllCaps="false"
        app:cornerRadius="5dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_input_kapasitas_tangki"
        android:hint="@string/text_kapasitas_tangki"
        android:textSize="20dp"
        android:background="@drawable/shape"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_fragment_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_input_ordometer_akhir"
        android:hint="@string/text_ordometer_akhir"
        android:textSize="20dp"
        android:background="@drawable/shape"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/et_input_kapasitas_tangki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_input_ordometer_awal"
        android:hint="@string/text_ordometer_awal"
        android:textSize="20dp"
        android:background="@drawable/shape"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/et_input_ordometer_akhir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>